DEVELOPMENT
- Fixed timing delay issue with all trigger functions that supported delay.
- Added support to import triggers in YAML.

1.20
- Added ability to import and export compressed base64 triggers.
- Fixed bug in trigger enable/disable action functions.
- Added new trigger action functions, wait, set, get, log.

1.19
- Fixed a bug with ACT trigger import.
- Switched CSS preprocessor from SCSS to GCSS.
- Responsive CSS tweaks.

1.18
- Added "triggers" view with support for complex triggers and ACT import.

1.17
- Added "views" API to allow for easy creation of new interfaces.
- Numerous tweaks to encounter detection.
- Numerous tweaks to interface.
- Timeline view is now rendered entirely in HTML5 canvas.
- Some timeline functionality removed in favor of pushing out new version more quickly.
- Table view is now the default view.

1.16
- Tweaks and hotfixes to server side log parsing.
- Imposed a delay before a new encounter can begin.
- Fixed table view when swapping to it from another view.
- Fixed combatant data when viewing past encounters.

1.15
- Server now tracks encounters to determine accurately when encounters start and end, independent of ACT.
- Added hamburger menu with view changer.
- Added 'table' view.
- Fixed timeline scroll on touch devices.

1.14
- Rebuilt timeline renderer, now uses HTML5 canvas.
- Log lines are now dumped to temporary files instead of being stored in server memory, should reduce out of memory crashes.

1.13
- Fixed issue where timeline wouldn't load.
- Fixed crash in log line parser.

1.12
- Fixed issue (hopefully) where using the limit break would cause display glitches.
- Fixed issue that caused pets to constantly resort in timeline.
- Tweaked web worker to (hopefully) fix issue where the timeline lags behind.
- Moved encounter information to seperate line, indication if clear or wipe.

1.11
- Fixed an issue that caused the server to crash when parsing certain log lines.